syntax = "proto3";

package grpc;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

service Compactor {
  rpc GetDeleteRequests(GetDeleteRequestsRequest) returns (GetDeleteRequestsResponse);
  rpc GetCacheGenNumbers(GetCacheGenNumbersRequest) returns (GetCacheGenNumbersResponse);
}

message GetDeleteRequestsRequest {
  bool forQuerytimeFiltering = 1;
}

message GetDeleteRequestsResponse {
  repeated DeleteRequest deleteRequests = 1;
}

message DeleteRequest {
  string requestID = 1;
  int64 startTime = 2;
  int64 endTime = 3;
  string query = 4;
  string status = 5;
  int64 createdAt = 6;
}

message GetCacheGenNumbersRequest {}

message GetCacheGenNumbersResponse {
  string resultsCacheGen = 1;
}

// Job represents a single job in the queue
message Job {
  string id = 1;
  JobType type = 2;
  bytes payload = 3; // encoded job specific payload
}

// JobType represents the type of job
enum JobType {
  JOB_TYPE_DELETION = 0;
  // Add more job types as needed
}

// DequeueRequest is used to request a job from the queue
message DequeueRequest {}

// DequeueResponse contains the dequeued job
message DequeueResponse {
  Job job = 1;
}

// ReportJobResultRequest is used to report the result of executing a job
message ReportJobResultRequest {
  string job_id = 1;
  JobType job_type = 2;
  string error = 3; // Empty string indicates success
  bytes result = 4; // encoded job specific result payload
}

// ReportJobResultResponse is the response to reporting a job result
message ReportJobResultResponse {}

// JobQueue provides RPC methods for job queue operations
service JobQueue {
  // Dequeue retrieves the next job from the queue
  rpc Dequeue(DequeueRequest) returns (DequeueResponse) {}
  // ReportJobResult reports the result of executing a job
  rpc ReportJobResult(ReportJobResultRequest) returns (ReportJobResultResponse) {}
}
